--- a/main.mustache
+++ b/main.mustache
@@ -47,11 +47,24 @@ Where to find me</h3>
 GitHub Activity</h3>
 
 <!--START_SECTION:activity-->
+  
+<details>
+<summary> &#9655;</summary>
+<h3><img src="https://i.imgur.com/fYbz1Tu.gif" width="17"/>  
+Activity Graph</h3>
+
+<img alt="Activity" width="547px" src="https://activity-graph.herokuapp.com/graph?username=themagicalmammal&theme=xcode&custom_title=Activity%20Graph&hide_border=true" />
+<br><br>
 
 <details>
 <summary> &#9655;</summary>
-<h3><img src="https://i.imgur.com/xGG5c7N.png" width="18"/>  
-QR Code</h3>
+<h3><img src="https://i.imgur.com/x8tsLuE.png" width="18"/>  Trophies</h3>
+
+[![trophy](https://github-profile-trophy.vercel.app/?username=themagicalmammal&theme=juicyfresh&row=1&column=5)](https://github.com/themagicalmammal) 
+
+<details>
+<summary> &#9655;</summary>
+<h3><img src="https://i.imgur.com/xGG5c7N.png" width="18"/>  QR Code</h3>
 
 <img alt="QRCode" width="200px" src="https://i.imgur.com/DSHPHdq.png" />
 
@@ -74,20 +87,6 @@ Credits</h3>
 Visitor</h3>
 <img src="https://profile-counter.glitch.me/themagicalmammal/count.svg" />
 <br><br>
-
-<details>
-<summary> &#9655;</summary>
-<h3><img src="https://i.imgur.com/x8tsLuE.png" width="18"/>  
-Trophies</h3>
-
-[![trophy](https://github-profile-trophy.vercel.app/?username=themagicalmammal&theme=discord)](https://github.com/themagicalmammal) 
-  
-<details>
-<summary> &#9655;</summary>
-<h3><img src="https://i.imgur.com/voWLaLX.gif" width="17"/>  
-Streak</h3>
-
-<img height="137px" src="https://github-readme-streak-stats.herokuapp.com/?user=themagicalmammal&bg_color=30,e96443,904e95&title_color=fff&text_color=fff"/>
 </details>
 </details>
 </details>
