--- a/main.mustache
+++ b/main.mustache
@@ -1,26 +1,21 @@
 <img alt="Hello" width="250px" src="https://i.imgur.com/Fihbexl.gif" />
-
 <codersrank-skills-chart username="themagicalmammal"></codersrank-skills-chart>
-
 I'm Dipan, currently doing my Master's in the University of Leeds in 
 [Data Science and Analytics](https://courses.leeds.ac.uk/i071/data-science-and-analytics-msc) 
 from <img src="https://i.imgur.com/DPngeUJ.png" width="13"/> <b>Leeds, England</b>. 
 I was born in <img src="https://i.imgur.com/DzzzpBo.png" width="13"/> <b>Indore, India</b>. 
-
 <p>Currently, the weather is: <b> {{city_temperature}}°C, 
-<i>{{city_weather}}</i></b></br>Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>.</p>
-
+   <i>{{city_weather}}</i></b></br>Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>.
+</p>
 <h3><img src="https://i.imgur.com/aSVPWXc.png" width="18"/>   Spotify Playing</h3>
-                                                                                            
 [![Spotify](https://spotify-pw0mefqpu-spotifydipan.vercel.app/api/spotify)](https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6)
-
 <h3><img src="https://i.imgur.com/84QPnNl.png" width="18"/>  
-My Stats</h3>
-
+   My Stats
+</h3>
 ![Dipan's GitHub stats](https://github-readme-stats-bay-ten-48.vercel.app/api?username=themagicalmammal&include_all_commits=true&bg_color=30,e96443,904e95&title_color=fff&text_color=fff)
-
 <h3><img src="https://i.imgur.com/yQHTmCW.png" width="18"/>  
-Where to find me</h3>
+   Where to find me
+</h3>
 <a href="https://github.com/themagicalmammal/"> <img alt="Github" width="40px" src="https://i.imgur.com/RjscN2M.png" /></a>
 <a href="https://uk.linkedin.com/in/themagicalmammal/"> <img alt="Linkedin" width="40px" src="https://i.imgur.com/Hp2w5wM.png" /></a>
 <a href="https://www.reddit.com/user/themagicalmammal/"> <img alt="Reddit" width="40px" src="https://i.imgur.com/E8vTLyb.png" /></a>
@@ -36,58 +31,49 @@ Where to find me</h3>
 <a href="https://medium.com/@d19cyber"> <img alt="Medium" width="40px" src="https://i.imgur.com/HvRIk6L.png" /></a>
 <a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ"> <img alt="Plum" width="40px" src="https://i.imgur.com/PNhxaKM.png" /></a>
 <br><br>
-
 <details>
-<summary> &#9655;</summary>
-<h3><img src="https://i.imgur.com/Iv6o6Gf.png" width="18"/>  
-GitHub Activity</h3>
-
-<!--START_SECTION:activity-->
-  
-<details>
-<summary> &#9655;</summary>
-<h3><img src="https://i.imgur.com/fYbz1Tu.gif" width="17"/>  
-Activity Graph</h3>
-
-<img alt="Activity" width="547px" src="https://activity-graph.herokuapp.com/graph?username=themagicalmammal&theme=xcode&custom_title=Activity%20Graph&hide_border=true" />
-<br><br>
-
-<details>
-<summary> &#9655;</summary>
-<h3><img src="https://i.imgur.com/x8tsLuE.png" width="18"/>  Trophies</h3>
-
-[![trophy](https://github-profile-trophy.vercel.app/?username=themagicalmammal&theme=juicyfresh&row=1&column=5)](https://github.com/themagicalmammal) 
-
-<details>
-<summary> &#9655;</summary>
-<h3><img src="https://i.imgur.com/xGG5c7N.png" width="18"/>  QR Code</h3>
-
-<img alt="QRCode" width="200px" src="https://i.imgur.com/DSHPHdq.png" />
-
-<details>
-<summary> &#9655;</summary>
-
-<h3><img src="https://i.imgur.com/1mimHIo.png" width="18"/>  
-Credits</h3>
-
-1. <img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13"/> [Sourajit Karmakar](https://github.com/sourajitk)
-2. <img src="https://cdn-icons-png.flaticon.com/128/197/197564.png" width="13"/> [Thomas Guibert](https://github.com/thmsgbrt)
-3. <img src="https://cdn-icons-png.flaticon.com/512/3909/3909444.png" width="13"/> [Siv Ram Shastri Jonnalagadda](https://github.com/Prince-Shivaram)
-4. <img src="https://cdn-icons-png.flaticon.com/512/3909/3909444.png" width="13"/> [Anurag Hazra](https://github.com/anuraghazra)
-5. <img src="https://cdn-icons-png.flaticon.com/128/197/197559.png" width="13"/> [Harry](https://github.com/owl4ce)
-6. <img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13"/> [Ryan Lanciaux](https://github.com/ryanlanciaux)
-
-<details>
-<summary> &#9655;</summary>
-<h3><img src="https://i.imgur.com/XJ0hI8P.png" width="18"/>  
-Visitor</h3>
-<img src="https://profile-counter.glitch.me/themagicalmammal/count.svg" />
-<br><br>
+   <summary> &#9655;</summary>
+   <h3><img src="https://i.imgur.com/Iv6o6Gf.png" width="18"/>  
+      GitHub Activity
+   </h3>
+   <!--START_SECTION:activity-->
+   <details>
+      <summary> &#9655;</summary>
+      <h3><img src="https://i.imgur.com/fYbz1Tu.gif" width="17"/>  
+         Activity Graph
+      </h3>
+      <img alt="Activity" width="547px" src="https://activity-graph.herokuapp.com/graph?username=themagicalmammal&theme=xcode&custom_title=Activity%20Graph&hide_border=true" />
+      <br><br>
+      <details>
+         <summary> &#9655;</summary>
+         <h3><img src="https://i.imgur.com/x8tsLuE.png" width="18"/>  Trophies</h3>
+         [![trophy](https://github-profile-trophy.vercel.app/?username=themagicalmammal&theme=juicyfresh&row=1&column=5)](https://github.com/themagicalmammal) 
+         <details>
+            <summary> &#9655;</summary>
+            <h3><img src="https://i.imgur.com/xGG5c7N.png" width="18"/>  QR Code</h3>
+            <img alt="QRCode" width="200px" src="https://i.imgur.com/DSHPHdq.png" />
+            <details>
+               <summary> &#9655;</summary>
+               <h3><img src="https://i.imgur.com/1mimHIo.png" width="18"/>  
+                  Credits
+               </h3>
+               1. <img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13"/> [Sourajit Karmakar](https://github.com/sourajitk)
+               2. <img src="https://cdn-icons-png.flaticon.com/128/197/197564.png" width="13"/> [Thomas Guibert](https://github.com/thmsgbrt)
+               3. <img src="https://cdn-icons-png.flaticon.com/512/3909/3909444.png" width="13"/> [Siv Ram Shastri Jonnalagadda](https://github.com/Prince-Shivaram)
+               4. <img src="https://cdn-icons-png.flaticon.com/512/3909/3909444.png" width="13"/> [Anurag Hazra](https://github.com/anuraghazra)
+               5. <img src="https://cdn-icons-png.flaticon.com/128/197/197559.png" width="13"/> [Harry](https://github.com/owl4ce)
+               6. <img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13"/> [Ryan Lanciaux](https://github.com/ryanlanciaux)
+               <details>
+                  <summary> &#9655;</summary>
+                  <h3><img src="https://i.imgur.com/XJ0hI8P.png" width="18"/>  
+                     Visitor
+                  </h3>
+                  <img src="https://profile-counter.glitch.me/themagicalmammal/count.svg" />
+                  <br><br>
+               </details>
+            </details>
+         </details>
+      </details>
+   </details>
 </details>
-</details>
-</details>
-</details>
-</details>
-</details>
-
 <img src="https://i.imgur.com/JgaEjcz.png" width="13"/> <b>Last refresh:</b> {{refresh_date}}
