--- a/main.mustache
+++ b/main.mustache
@@ -5,7 +5,7 @@ I&#39;m Dipan, currently doing my Master&#39;s in the University of Leeds in
 from <img src="https://i.imgur.com/DPngeUJ.png" width="13"/> <b>Leeds, England</b>. 
 I was born in <img src="https://i.imgur.com/DzzzpBo.png" width="13"/> <b>Indore, India</b>. </p>
 <p><p>Currently, the weather is: <b> {{city_temperature}}°C, 
-   <i>{{city_weather}}</i></b></br>Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>.
+   <i>{{city_weather}}</i></b><br>Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>.
 </p></p>
 <p><h3><img src="https://i.imgur.com/aSVPWXc.png" width="18"/> Spotify Playing</h3>
 <a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6"><img src="https://spotify-pw0mefqpu-spotifydipan.vercel.app/api/spotify" alt="Spotify"></a></p>
@@ -28,7 +28,7 @@ I was born in <img src="https://i.imgur.com/DzzzpBo.png" width="13"/> <b>Indore,
 <a href="https://myanimelist.net/profile/themagicalmammal"> <img alt="MAL" width="40px" src="https://i.imgur.com/TnZcuA4.png" /></a>
 <a href="https://medium.com/@d19cyber"> <img alt="Medium" width="40px" src="https://i.imgur.com/HvRIk6L.png" /></a>
 <a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ"> <img alt="Plum" width="40px" src="https://i.imgur.com/PNhxaKM.png" /></a>
-<br><br></p>
+<br></p>
 <p><details>
    <summary> &#9655;</summary>
    <h3><img src="https://i.imgur.com/Iv6o6Gf.png" width="18"/> GitHub Activity
@@ -43,7 +43,8 @@ I was born in <img src="https://i.imgur.com/DzzzpBo.png" width="13"/> <b>Indore,
       <details>
          <summary> &#9655;</summary>
          <h3><img src="https://i.imgur.com/x8tsLuE.png" width="18"/> Trophies</h3>
-         <a href="https://github.com/themagicalmammal"><img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=juicyfresh&amp;row=1&amp;column=5" alt="trophy"></a> 
+         <img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=juicyfresh&amp;row=1&amp;column=5" alt="trophy">
+         <br><br>
          <details>
             <summary> &#9655;</summary>
             <h3><img src="https://i.imgur.com/xGG5c7N.png" width="18"/> QR Code</h3>
@@ -51,23 +52,17 @@ I was born in <img src="https://i.imgur.com/DzzzpBo.png" width="13"/> <b>Indore,
             <details>
                <summary> &#9655;</summary>
                <h3><img src="https://i.imgur.com/1mimHIo.png" width="18"/> Credits</h3></p>
-<pre><code>           1. <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"https://cdn-icons-png.flaticon.com/128/197/197484.png"</span> <span class="hljs-attr">width</span>=<span class="hljs-string">"13"</span>/&gt;</span> [Sourajit Karmakar](https://github.com/sourajitk)
-           2. <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"https://cdn-icons-png.flaticon.com/128/197/197564.png"</span> <span class="hljs-attr">width</span>=<span class="hljs-string">"13"</span>/&gt;</span> [Thomas Guibert](https://github.com/thmsgbrt)
-           3. <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"https://cdn-icons-png.flaticon.com/512/3909/3909444.png"</span> <span class="hljs-attr">width</span>=<span class="hljs-string">"13"</span>/&gt;</span> [Siv Ram Shastri Jonnalagadda](https://github.com/Prince-Shivaram)
-           4. <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"https://cdn-icons-png.flaticon.com/512/3909/3909444.png"</span> <span class="hljs-attr">width</span>=<span class="hljs-string">"13"</span>/&gt;</span> [Anurag Hazra](https://github.com/anuraghazra)
-           5. <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"https://cdn-icons-png.flaticon.com/128/197/197559.png"</span> <span class="hljs-attr">width</span>=<span class="hljs-string">"13"</span>/&gt;</span> [Harry](https://github.com/owl4ce)
-           6. <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"https://cdn-icons-png.flaticon.com/128/197/197484.png"</span> <span class="hljs-attr">width</span>=<span class="hljs-string">"13"</span>/&gt;</span> [Ryan Lanciaux](https://github.com/ryanlanciaux)
-           <span class="hljs-tag">&lt;<span class="hljs-name">details</span>&gt;</span>
-              <span class="hljs-tag">&lt;<span class="hljs-name">summary</span>&gt;</span> &amp;#9655;<span class="hljs-tag">&lt;/<span class="hljs-name">summary</span>&gt;</span>
-              <span class="hljs-tag">&lt;<span class="hljs-name">h3</span>&gt;</span><span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"https://i.imgur.com/XJ0hI8P.png"</span> <span class="hljs-attr">width</span>=<span class="hljs-string">"18"</span>/&gt;</span>  
-                 Visitor
-              <span class="hljs-tag">&lt;/<span class="hljs-name">h3</span>&gt;</span>
-              <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"https://profile-counter.glitch.me/themagicalmammal/count.svg"</span> /&gt;</span>
-              <span class="hljs-tag">&lt;<span class="hljs-name">br</span>&gt;</span><span class="hljs-tag">&lt;<span class="hljs-name">br</span>&gt;</span>
-           <span class="hljs-tag">&lt;/<span class="hljs-name">details</span>&gt;</span>
-        <span class="hljs-tag">&lt;/<span class="hljs-name">details</span>&gt;</span>
-     <span class="hljs-tag">&lt;/<span class="hljs-name">details</span>&gt;</span>
-  <span class="hljs-tag">&lt;/<span class="hljs-name">details</span>&gt;</span>
-</code></pre><p>   </details>
+                <p><ol>
+                    <ol>
+                        <li><img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13"> <a href="https://github.com/sourajitk">Sourajit Karmakar</a></li>
+                        <li><img src="https://cdn-icons-png.flaticon.com/128/197/197564.png" width="13"> <a href="https://github.com/thmsgbrt">Thomas Guibert</a></li>
+                        <li><img src="https://cdn-icons-png.flaticon.com/512/3909/3909444.png" width="13"> <a href="https://github.com/Prince-Shivaram">Siv Ram Shastri Jonnalagadda</a></li>
+                        <li><img src="https://cdn-icons-png.flaticon.com/512/3909/3909444.png" width="13"> <a href="https://github.com/anuraghazra">Anurag Hazra</a></li>
+                        <li><img src="https://cdn-icons-png.flaticon.com/128/197/197559.png" width="13"> <a href="https://github.com/owl4ce">Harry</a></li>
+                        <li><img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13"> <a href="https://github.com/ryanlanciaux">Ryan Lanciaux</a></li>
+                    </ol>
+                </p> </ol><details> <summary> &#9655;</summary> <h3><img src="https://i.imgur.com/XJ0hI8P.png" width="18"/> Visitor </h3> <img src="https://profile-counter.glitch.me/themagicalmammal/count.svg" /> <br><br> </details> </details> </details> </details>
+<p>   </details>
 </details>
+<br>
 <img src="https://i.imgur.com/JgaEjcz.png" width="13"/> <b>Last refresh:</b> {{refresh_date}}</p>
