--- a/main.mustache
+++ b/main.mustache
@@ -67,4 +67,4 @@
     </details>
 </details>
 <br />
-<img src="https://i.imgur.com/JgaEjcz.png" width="13" /> <b>Last refresh:</b> {{refresh_date}}
+<p> <img src="https://i.imgur.com/JgaEjcz.png" width="13" /> <b>Last refresh:</b> {{refresh_date}}</p>
