--- a/main.mustache
+++ b/main.mustache
@@ -6,8 +6,12 @@
     from <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>Leeds, England</b>. I was born in <img src="https://i.imgur.com/DzzzpBo.png" width="13" /> <b>Indore, India</b>.
 </p>
 <p>
-    Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i></b><br />
-    Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>.
+    <h3><img src="https://i.imgur.com/HFHIBmx.png" width="18"/> Pics from <img src="https://i.imgur.com/DPngeUJ.png" width="13"/> Leeds</h3>
+    <p><img width="200" src="{{img1}}" /> <img width="200" src="{{img2}}" /> <img width="200" src="{{img3}}" /></p>
+    <p>Above are the last 3 pictures posted by  <a href="https://www.instagram.com/visitleeds/" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1024px-Instagram_logo_2016.svg.png" 
+    width="13"/> @visitleeds!</a><br/>Currently, the weather is: <b> {{city_temperature}}°C, 
+    <i>{{city_weather}}</i></b></br>Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>.</p>
 </p>
 <h3><img src="https://i.imgur.com/aSVPWXc.png" width="18" /> Spotify Playing</h3>
 <a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6"><img src="https://spotify-pw0mefqpu-spotifydipan.vercel.app/api/spotify" alt="Spotify" /></a>
