Minor Fixes & Beautify

--- a/main.mustache
+++ b/main.mustache
@@ -1,22 +1,15 @@
 <p><img alt="Hello" width="250px" src="https://i.imgur.com/Fihbexl.gif" /></p>
 <p>
-    <codersrank-skills-chart username="themagicalmammal"></codersrank-skills-chart>
-    I&#39;m Dipan, currently doing my Master&#39;s in the University of Leeds in
-    <a href="https://courses.leeds.ac.uk/i071/data-science-and-analytics-msc">Data Science and Analytics</a>
-    from <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>Leeds, England</b>. I was born in <img src="https://i.imgur.com/DzzzpBo.png" width="13" /> <b>Indore, India</b>.
-</p>
-<p>
-    <h3><img src="https://i.imgur.com/HFHIBmx.png" width="18"/> Pics from <img src="https://i.imgur.com/DPngeUJ.png" width="13"/> Leeds</h3>
-    <p><img width="200" src="{{img1}}" /> <img width="200" src="{{img2}}" /> <img width="200" src="{{img3}}" /></p>
-    <p>Above are the last 3 pictures posted by  <a href="https://www.instagram.com/visitleeds/" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1024px-Instagram_logo_2016.svg.png" 
-    width="13"/> @visitleeds!</a><br/>Currently, the weather is: <b> {{city_temperature}}°C, 
-    <i>{{city_weather}}</i></b></br>Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>.</p>
-</p>
+	<codersrank-skills-chart username="themagicalmammal"></codersrank-skills-chart> I&#39;m Dipan, currently doing my Master&#39;s in the University of Leeds in <a href="https://courses.leeds.ac.uk/i071/data-science-and-analytics-msc">Data Science and Analytics</a> from <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>Leeds, England</b>. I was born in <img src="https://i.imgur.com/DzzzpBo.png" width="13" /> <b>Indore, India</b>. </p>
+<h3><img src="https://i.imgur.com/HFHIBmx.png" width="18" /> Pics from <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> Leeds</h3>
+<p><img width="200" src="{{img1}}" /> <img width="200" src="{{img2}}" /> <img width="200" src="{{img3}}" /></p>
+<p> Above are the last 3 pictures posted by
+	<a href="https://www.instagram.com/visitleeds/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1024px-Instagram_logo_2016.svg.png" width="13" /> @visitleeds!</a>
+	<br /> Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i></b>
+	<br /> Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>. </p>
 <h3><img src="https://i.imgur.com/aSVPWXc.png" width="18" /> Spotify Playing</h3>
 <a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6"><img src="https://spotify-pw0mefqpu-spotifydipan.vercel.app/api/spotify" alt="Spotify" /></a>
-<h3><img src="https://i.imgur.com/84QPnNl.png" width="18" /> My Stats</h3>
-<img src="https://github-readme-stats-bay-ten-48.vercel.app/api?username=themagicalmammal&amp;include_all_commits=true&amp;bg_color=30,e96443,904e95&amp;title_color=fff&amp;text_color=fff" alt="Dipan&#39;s GitHub stats" />
+<h3><img src="https://i.imgur.com/84QPnNl.png" width="18" /> My Stats</h3> <img src="https://github-readme-stats-bay-ten-48.vercel.app/api?username=themagicalmammal&amp;include_all_commits=true&amp;bg_color=30,e96443,904e95&amp;title_color=fff&amp;text_color=fff" alt="Dipan&#39;s GitHub stats" />
 <h3><img src="https://i.imgur.com/yQHTmCW.png" width="18" /> Where to find me</h3>
 <a href="https://github.com/themagicalmammal/"> <img alt="Github" width="40px" src="https://i.imgur.com/RjscN2M.png" /></a>
 <a href="https://uk.linkedin.com/in/themagicalmammal/"> <img alt="Linkedin" width="40px" src="https://i.imgur.com/Hp2w5wM.png" /></a>
@@ -35,40 +28,36 @@
 <br />
 <br />
 <details>
-    <summary> &#9655;</summary>
-    <h3><img src="https://i.imgur.com/fYbz1Tu.gif" width="17" /> Activity Graph</h3>
-    <img alt="Activity" width="547px" src="https://activity-graph.herokuapp.com/graph?username=themagicalmammal&theme=xcode&custom_title=Activity%20Graph&hide_border=true" />
-    <br />
-    <br />
-    <details>
-        <summary> &#9655;</summary>
-        <h3><img src="https://i.imgur.com/x8tsLuE.png" width="18" /> Trophies</h3>
-        <img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=juicyfresh&amp;row=1&amp;column=5" alt="trophy" />
-        <br />
-        <br />
-        <details>
-            <summary> &#9655;</summary>
-            <h3><img src="https://i.imgur.com/xGG5c7N.png" width="18" /> QR Code</h3>
-            <img alt="QRCode" width="200px" src="https://i.imgur.com/DSHPHdq.png" />
-            <details>
-                <summary> &#9655;</summary>
-                <h3><img src="https://i.imgur.com/1mimHIo.png" width="18" /> Credits</h3>
-                <ol>
-                    <li><img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13" /> <a href="https://github.com/sourajitk">Sourajit Karmakar</a></li>
-                    <li><img src="https://cdn-icons-png.flaticon.com/128/197/197564.png" width="13" /> <a href="https://github.com/thmsgbrt">Thomas Guibert</a></li>
-                    <li><img src="https://cdn-icons-png.flaticon.com/512/3909/3909444.png" width="13" /> <a href="https://github.com/Prince-Shivaram">Siv Ram Shastri Jonnalagadda</a></li>
-                    <li><img src="https://cdn-icons-png.flaticon.com/512/3909/3909444.png" width="13" /> <a href="https://github.com/anuraghazra">Anurag Hazra</a></li>
-                    <li><img src="https://cdn-icons-png.flaticon.com/128/197/197559.png" width="13" /> <a href="https://github.com/owl4ce">Harry</a></li>
-                    <li><img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13" /> <a href="https://github.com/ryanlanciaux">Ryan Lanciaux</a></li>
-                </ol>
-                <details>
-                    <summary> &#9655;</summary>
-                    <h3><img src="https://i.imgur.com/XJ0hI8P.png" width="18" /> Visitor</h3>
-                    <img src="https://profile-counter.glitch.me/themagicalmammal/count.svg" /> <br />
-                </details>
-            </details>
-        </details>
-    </details>
+	<summary> &#9655;</summary>
+	<h3><img src="https://i.imgur.com/fYbz1Tu.gif" width="17" /> Activity Graph</h3> <img alt="Activity" width="547px" src="https://activity-graph.herokuapp.com/graph?username=themagicalmammal&theme=xcode&custom_title=Activity%20Graph&hide_border=true" />
+	<br />
+	<br />
+	<details>
+		<summary> &#9655;</summary>
+		<h3><img src="https://i.imgur.com/x8tsLuE.png" width="18" /> Trophies</h3> <img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=juicyfresh&amp;row=1&amp;column=5" alt="trophy" />
+		<br />
+		<br />
+		<details>
+			<summary> &#9655;</summary>
+			<h3><img src="https://i.imgur.com/xGG5c7N.png" width="18" /> QR Code</h3> <img alt="QRCode" width="200px" src="https://i.imgur.com/DSHPHdq.png" />
+			<details>
+				<summary> &#9655;</summary>
+				<h3><img src="https://i.imgur.com/1mimHIo.png" width="18" /> Credits</h3>
+				<ol>
+					<li><img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13" /> <a href="https://github.com/sourajitk">Sourajit Karmakar</a></li>
+					<li><img src="https://cdn-icons-png.flaticon.com/128/197/197564.png" width="13" /> <a href="https://github.com/thmsgbrt">Thomas Guibert</a></li>
+					<li><img src="https://cdn-icons-png.flaticon.com/512/3909/3909444.png" width="13" /> <a href="https://github.com/Prince-Shivaram">Siv Ram Shastri Jonnalagadda</a></li>
+					<li><img src="https://cdn-icons-png.flaticon.com/512/3909/3909444.png" width="13" /> <a href="https://github.com/anuraghazra">Anurag Hazra</a></li>
+					<li><img src="https://cdn-icons-png.flaticon.com/128/197/197559.png" width="13" /> <a href="https://github.com/owl4ce">Harry</a></li>
+					<li><img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13" /> <a href="https://github.com/ryanlanciaux">Ryan Lanciaux</a></li>
+				</ol>
+				<details>
+					<summary> &#9655;</summary>
+					<h3><img src="https://i.imgur.com/XJ0hI8P.png" width="18" /> Visitor</h3> <img src="https://profile-counter.glitch.me/themagicalmammal/count.svg" />
+					<br /> </details>
+			</details>
+		</details>
+	</details>
 </details>
 <br />
-<p> <img src="https://i.imgur.com/JgaEjcz.png" width="13" /> <b>Last refresh:</b> {{refresh_date}}</p>
+<p><img src="https://i.imgur.com/JgaEjcz.png" width="13" /> <b>Last refresh:</b> {{refresh_date}}</p>
