--- a/main.mustache
+++ b/main.mustache
@@ -1,4 +1,4 @@
-<p><img alt="Hello" width="250px" src="https://i.imgur.com/Fihbexl.gif" /></p>
+<p><img src="https://i.imgur.com/Fihbexl.gif" alt="Hello" width="250" /></p>
 <p>
 	<codersrank-skills-chart username="themagicalmammal"></codersrank-skills-chart> I&#39;m Dipan, currently doing my Master&#39;s in the University of Leeds in <a href="https://courses.leeds.ac.uk/i071/data-science-and-analytics-msc">Data Science and Analytics</a> from <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>Leeds, England</b>. I was born in <img src="https://i.imgur.com/DzzzpBo.png" width="13" /> <b>Indore, India</b>. </p>
 <h3><img src="https://i.imgur.com/HFHIBmx.png" width="18" /> Pics from <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> Leeds</h3>
