--- a/main.mustache
+++ b/main.mustache
@@ -1,7 +1,7 @@
 <p><img src="https://i.imgur.com/Fihbexl.gif" alt="Hello" width="250" /></p>
 <p>
-	<codersrank-skills-chart username="themagicalmammal"></codersrank-skills-chart> Hey, I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> ETL Systems </a> in 
-	<img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>London, England</b>. 
+	<codersrank-skills-chart username="themagicalmammal"></codersrank-skills-chart> Hey, I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> 
+	<img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>London, England</b>. 
 <h3><img src="https://i.imgur.com/HFHIBmx.png" width="18" /> Pics from <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> London</h3>
 <p><img width="200" src="{{img1}}" /> <img width="200" src="{{img2}}" /> <img width="200" src="{{img3}}" /></p>
 <p> Above are the last 3 pictures posted by
