--- a/main.mustache
+++ b/main.mustache
@@ -32,7 +32,7 @@
 <br />
 <details>
 	<summary> &#9655;</summary>
-	<h3><img src="https://i.imgur.com/x8tsLuE.png" width="18" /> Trophies</h3> <img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=buddhism&amp;row=1&amp;column=5" alt="trophy" />
+	<h3><img src="https://i.imgur.com/x8tsLuE.png" width="18" /> Trophies</h3> <img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=onestar&amp;row=1&amp;column=5" alt="trophy" />
 	<br />
 	<br />
 	<details>
