--- a/main.mustache
+++ b/main.mustache
@@ -12,22 +12,24 @@
 <a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6"><img src="https://spotify-playing-now-readme-8u5laga6k-dipanspotify.vercel.app/api/now-playing.svg" width="490" alt="Spotify" /></a>
 <h3><img src="https://i.imgur.com/84QPnNl.png" width="18" /> My Stats</h3> <img src="https://github-readme-stats.vercel.app/api?username=themagicalmammal&amp;include_all_commits=true&amp;bg_color=30,e96443,904e95&amp;title_color=fff&amp;text_color=fff" alt="Dipan&#39;s GitHub stats" />
 <h3><img src="https://i.imgur.com/yQHTmCW.png" width="18" /> Where to find me</h3>
-<a href="https://github.com/themagicalmammal/"> <img alt="Github" width="40px" src="https://i.imgur.com/RjscN2M.png" /></a>
 <a href="https://uk.linkedin.com/in/themagicalmammal/"> <img alt="Linkedin" width="40px" src="https://i.imgur.com/Hp2w5wM.png" /></a>
 <a href="https://www.reddit.com/user/themagicalmammal/"> <img alt="Reddit" width="40px" src="https://i.imgur.com/E8vTLyb.png" /></a>
-<a href="https://www.kaggle.com/themagicalmammal"> <img alt="Kaggle" width="40px" src="https://i.imgur.com/6XAnA1Y.png" /></a>
 <a href="https://telegram.im/@themagicalmammal"> <img alt="Telegram" width="40px" src="https://i.imgur.com/8uCq4fi.png" /> </a>
+<a href="https://www.quora.com/profile/Dipan-Nanda"> <img alt="Quora" width="40px" src="https://i.imgur.com/4fFA2aO.png" /> </a>
 <a href="https://dsc.bio/themagicalmammal"> <img alt="Discord" width="40px" src="https://i.imgur.com/allk32s.png" /></a>
-<a href="https://forum.xda-developers.com/m/themagicalmammal.9670192/"> <img alt="XDA" width="40px" src="https://i.imgur.com/ZkDQREa.png" /></a>
 <a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6?si=i5kyqZQOQmOu_NRn-T7FQw&nd=1"> <img alt="Spotify" width="40px" src="https://i.imgur.com/TuGJlcZ.png" /> </a>
-<a href="https://gist.github.com/themagicalmammal/"> <img alt="Gist" width="40px" src="https://i.imgur.com/6w4HNmL.png" /></a>
-<a href="https://www.coursera.org/user/ccc24c4adb1726e9cbdef303b15cdbcf"> <img alt="Coursera" width="40px" src="https://i.imgur.com/bxjrGF3.png" /></a>
-<a href="https://www.sololearn.com/profile/4562055"> <img alt="Sololearn" width="40px" src="https://i.imgur.com/6mnh2V5.png" /></a>
 <a href="https://www.deviantart.com/themagicalmammal"> <img alt="Devintart" width="40px" src="https://i.imgur.com/YWUKoPE.png" /></a>
-<a href="https://pypi.org/user/themagicalmammal/"> <img alt="Pypi" width="40px" src="https://i.imgur.com/901ps8h.png" /></a>
 <a href="https://myanimelist.net/profile/themagicalmammal"> <img alt="MAL" width="40px" src="https://i.imgur.com/TnZcuA4.png" /></a>
 <a href="https://medium.com/@d19cyber"> <img alt="Medium" width="40px" src="https://i.imgur.com/HvRIk6L.png" /></a>
 <a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ"> <img alt="Plum" width="40px" src="https://i.imgur.com/PNhxaKM.png" /></a>
+<h3><img src="https://i.imgur.com/YWn1uv5.png" width="18" /> Coding Profiles </h3>
+<a href="https://github.com/themagicalmammal/"> <img alt="Github" width="40px" src="https://i.imgur.com/RjscN2M.png" /></a>
+<a href="https://www.kaggle.com/themagicalmammal"> <img alt="Kaggle" width="40px" src="https://i.imgur.com/6XAnA1Y.png" /></a>
+<a href="https://forum.xda-developers.com/m/themagicalmammal.9670192/"> <img alt="XDA" width="40px" src="https://i.imgur.com/ZkDQREa.png" /></a>
+<a href="https://gist.github.com/themagicalmammal/"> <img alt="Gist" width="40px" src="https://i.imgur.com/6w4HNmL.png" /></a>
+<a href="https://www.coursera.org/user/ccc24c4adb1726e9cbdef303b15cdbcf"> <img alt="Coursera" width="40px" src="https://i.imgur.com/bxjrGF3.png" /></a>
+<a href="https://www.sololearn.com/profile/4562055"> <img alt="Sololearn" width="40px" src="https://i.imgur.com/6mnh2V5.png" /></a>
+<a href="https://pypi.org/user/themagicalmammal/"> <img alt="Pypi" width="40px" src="https://i.imgur.com/901ps8h.png" /></a>
 <br />
 <br />
 <details>
