--- a/main.mustache
+++ b/main.mustache
@@ -1,3 +1,4 @@
+<img src="https://capsule-render.vercel.app/api?type=waving&color=timeGradient"/>
 <p><img src="https://i.imgur.com/Fihbexl.gif" alt="Hello" width="250" /></p>
 <p>
 	I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> 
@@ -62,3 +63,4 @@
 	</details>
 </details>
 <p><img src="https://i.imgur.com/JgaEjcz.png" width="13" /> <b>Last refresh:</b> {{refresh_date}}</p>
+<img src="https://capsule-render.vercel.app/api?type=waving&reversal=true&section=footer&color=timeGradient"/>
