--- a/main.mustache
+++ b/main.mustache
@@ -2,16 +2,16 @@
 <p>
 	I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> 
 	<img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>London, England</b>. 
-<h3><img src="https://i.imgur.com/HFHIBmx.png" width="18" /> Pics from <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> London</h3>
+<h3><img src="https://i.imgur.com/HFHIBmx.png" width="18" /> 𝗣𝗶𝗰𝘀 𝗳𝗿𝗼𝗺 <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> 𝗟𝗼𝗻𝗱𝗼𝗻 </h3>
 <p><img width="200" src="{{img1}}" /> <img width="200" src="{{img2}}" /> <img width="200" src="{{img3}}" /></p>
 <p> Above are the last 3 pictures posted by
 	<a href="https://www.instagram.com/london4visit/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1024px-Instagram_logo_2016.svg.png" width="13" /> @london4visit</a>
 	<br /> Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i></b>
 	<br /> Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>. </p>
-<h3><img src="https://i.imgur.com/aSVPWXc.png" width="18" /> Spotify Playing</h3>
+<h3><img src="https://i.imgur.com/aSVPWXc.png" width="18" /> 𝗦𝗽𝗼𝘁𝗶𝗳𝘆 𝗣𝗹𝗮𝘆𝗶𝗻𝗴 </h3>
 <a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6"><img src="https://spotify-playing-now-readme-8u5laga6k-dipanspotify.vercel.app/api/now-playing.svg" width="490" alt="Spotify" /></a>
-<h3><img src="https://i.imgur.com/84QPnNl.png" width="18" /> My Stats</h3> <img src="https://github-readme-stats.vercel.app/api?username=themagicalmammal&amp;include_all_commits=true&amp;bg_color=30,e96443,904e95&amp;title_color=fff&amp;text_color=fff" alt="Dipan&#39;s GitHub stats" />
-<h3><img src="https://i.imgur.com/yQHTmCW.png" width="18" /> Where to find me</h3>
+<h3><img src="https://i.imgur.com/84QPnNl.png" width="18" /> 𝗠𝘆 𝗦𝘁𝗮𝘁𝘀 </h3> <img src="https://github-readme-stats.vercel.app/api?username=themagicalmammal&amp;include_all_commits=true&amp;bg_color=30,e96443,904e95&amp;title_color=fff&amp;text_color=fff" alt="Dipan&#39;s GitHub stats" />
+<h3><img src="https://i.imgur.com/yQHTmCW.png" width="18" /> 𝗪𝗵𝗲𝗿𝗲 𝘁𝗼 𝗳𝗶𝗻𝗱 𝗺𝗲 </h3>
 <a href="https://uk.linkedin.com/in/themagicalmammal/"> <img alt="Linkedin" width="40px" src="https://i.imgur.com/Hp2w5wM.png" /></a>
 <a href="https://www.reddit.com/user/themagicalmammal/"> <img alt="Reddit" width="40px" src="https://i.imgur.com/E8vTLyb.png" /></a>
 <a href="https://telegram.im/@themagicalmammal"> <img alt="Telegram" width="40px" src="https://i.imgur.com/8uCq4fi.png" /> </a>
@@ -25,7 +25,7 @@
 <br />
 <details>
 	<summary> &#9655;</summary>
-	<h3><img src="https://i.imgur.com/YWn1uv5.png" width="18" /> Coding Profiles </h3>
+	<h3><img src="https://i.imgur.com/YWn1uv5.png" width="18" /> 𝗖𝗼𝗱𝗶𝗻𝗴 𝗣𝗿𝗼𝗳𝗶𝗹𝗲𝘀 </h3>
 	<a href="https://github.com/themagicalmammal/"> <img alt="Github" width="40px" src="https://i.imgur.com/RjscN2M.png" /></a>
 	<a href="https://gist.github.com/themagicalmammal/"> <img alt="Gist" width="40px" src="https://i.imgur.com/6w4HNmL.png" /></a>
 	<a href="https://www.kaggle.com/themagicalmammal"> <img alt="Kaggle" width="40px" src="https://i.imgur.com/6XAnA1Y.png" /></a>
@@ -36,15 +36,15 @@
 	<br />
 	<details>
 		<summary> &#9655;</summary>
-		<h3><img src="https://i.imgur.com/x8tsLuE.png" width="18" /> Trophies</h3> <img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=onestar&amp;row=1&amp;column=5" alt="trophy" />
+		<h3><img src="https://i.imgur.com/x8tsLuE.png" width="18" /> 𝗧𝗿𝗼𝗽𝗵𝗶𝗲𝘀 </h3> <img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=onestar&amp;row=1&amp;column=5" alt="trophy" />
 		<br />
 		<details>
 			<summary> &#9655;</summary>
-			<h3><img src="https://i.imgur.com/xGG5c7N.png" width="18" /> QR Code</h3> <img alt="QRCode" width="200px" src="https://i.imgur.com/FS60AP0.png" />
+			<h3><img src="https://i.imgur.com/xGG5c7N.png" width="18" /> 𝗤𝗥 𝗖𝗼𝗱𝗲 </h3> <img alt="QRCode" width="200px" src="https://i.imgur.com/FS60AP0.png" />
 			<br />
 			<details>
 				<summary> &#9655;</summary>
-				<h3><img src="https://i.imgur.com/1mimHIo.png" width="18" /> Credits</h3>
+				<h3><img src="https://i.imgur.com/1mimHIo.png" width="18" /> 𝗖𝗿𝗲𝗱𝗶𝘁𝘀 </h3>
 				<ol>
 					<li><img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13" /> <a href="https://github.com/sourajitk">Sourajit Karmakar</a></li>
 					<li><img src="https://cdn-icons-png.flaticon.com/128/197/197564.png" width="13" /> <a href="https://github.com/thmsgbrt">Thomas Guibert</a></li>
@@ -55,11 +55,11 @@
 				</ol>
 				<details>
 					<summary> &#9655;</summary>
-					<h3><img src="https://i.imgur.com/XJ0hI8P.png" width="18" /> Visitor</h3> <img src="https://profile-counter.glitch.me/themagicalmammal/count.svg" />
+					<h3><img src="https://i.imgur.com/XJ0hI8P.png" width="18" /> 𝗩𝗶𝘀𝗶𝘁𝗼𝗿 </h3> <img src="https://profile-counter.glitch.me/themagicalmammal/count.svg" />
 					<br /> </details>
 			</details>
 		</details>
 	</details>
 </details>
-<p><img src="https://i.imgur.com/JgaEjcz.png" width="13" /> <b>Last refresh:</b> {{refresh_date}}</p>
+<p><img src="https://i.imgur.com/JgaEjcz.png" width="13" /> 𝗟𝗮𝘀𝘁 𝗿𝗲𝗳𝗿𝗲𝘀𝗵: {{refresh_date}}</p>
 <img src="https://capsule-render.vercel.app/api?type=waving&color=timeGradient&reversal=true&height=80&section=footer"/>
