--- a/main.mustache
+++ b/main.mustache
@@ -1,4 +1,4 @@
-<img src="https://capsule-render.vercel.app/api?type=waving&color=timeGradient&reversal=true&height=135&text=Hello&animation=fadeIn&fontAlign=15&fontAlignY=40"/>
+<img src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=timeGradient&reversal=true&height=135&text=Hello&animation=fadeIn&fontAlign=15&fontAlignY=40"/>
 <p>
 	I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> 
 	<img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>London, England</b>. 
@@ -62,4 +62,4 @@
 	</details>
 </details>
 <p><img src="https://i.imgur.com/JgaEjcz.png" width="11" /> 𝗟𝗮𝘀𝘁 𝗿𝗲𝗳𝗿𝗲𝘀𝗵: {{refresh_date}}</p>
-<img src="https://capsule-render.vercel.app/api?type=waving&color=timeGradient&reversal=true&height=80&section=footer"/>
+<img src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=timeGradient&reversal=true&height=80&section=footer"/>
