--- a/main.mustache
+++ b/main.mustache
@@ -62,5 +62,5 @@
 	</details>
 </details>
 <br />
-<p><img src="https://i.imgur.com/JgaEjcz.png" width="11" /> 𝗟𝗮𝘀𝘁 𝗿𝗲𝗳𝗿𝗲𝘀𝗵: {{refresh_date}}</p>
+<p><img src="https://i.imgur.com/JgaEjcz.png" width="11" /> <b> Last Refresh: </b> {{refresh_date}}</p>
 <img src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=timeGradient&reversal=true&height=80&section=footer"/>
