--- a/main.mustache
+++ b/main.mustache
@@ -1,4 +1,4 @@
-<img src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=timeGradient&reversal=true&height=135&text=Hello&animation=fadeIn&fontAlign=15&fontAlignY=40"/>
+<img href="https://themagicalmammal.wrapped.run" src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=timeGradient&reversal=true&height=135&text=Hello&animation=fadeIn&fontAlign=15&fontAlignY=40"/>
 <p>
    I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> 
    <img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>London, England</b>. 
@@ -31,6 +31,19 @@
 <a href="https://myanimelist.net/profile/themagicalmammal"> <img alt="MAL" width="40px" src="https://i.imgur.com/TnZcuA4.png" /></a>
 <a href="https://medium.com/@d19cyber"> <img alt="Medium" width="40px" src="https://i.imgur.com/HvRIk6L.png" /></a>
 <a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ"> <img alt="Plum" width="40px" src="https://i.imgur.com/PNhxaKM.png" /></a>
+
+<h3><img src="https://i.imgur.com/yQHTmCW.png" width="15" /> 𝗧𝗲𝗰𝗵 𝗦𝘁𝗮𝗰𝗸 </h3>
+<div style="display: flex;">
+<img src="https://techstack-generator.vercel.app/python-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
+<img src="https://techstack-generator.vercel.app/django-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
+<img src="https://techstack-generator.vercel.app/github-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
+<img src="https://techstack-generator.vercel.app/js-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
+<img src="https://i.imgur.com/aMYzrT8.gif" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
+<img src="https://techstack-generator.vercel.app/cpp-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
+<img src="https://techstack-generator.vercel.app/prettier-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 0px; margin-bottom: 5px;" />
+<img src="https://techstack-generator.vercel.app/aws-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 0px;" /><img src="https://techstack-generator.vercel.app/docker-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 0px;" />
+</div>
+
 <br />
 <details>
    <summary> &#9655;</summary>
