--- a/main.mustache
+++ b/main.mustache
@@ -33,16 +33,14 @@
 <a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ"> <img alt="Plum" width="40px" src="https://i.imgur.com/PNhxaKM.png" /></a>
 
 <h3><img src="https://i.imgur.com/yQHTmCW.png" width="15" /> 𝗧𝗲𝗰𝗵 𝗦𝘁𝗮𝗰𝗸 </h3>
-<div style="display: flex;">
-<img src="https://techstack-generator.vercel.app/python-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
-<img src="https://techstack-generator.vercel.app/django-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
-<img src="https://techstack-generator.vercel.app/github-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
-<img src="https://techstack-generator.vercel.app/js-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
-<img src="https://i.imgur.com/aMYzrT8.gif" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
-<img src="https://techstack-generator.vercel.app/cpp-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 5px;" />
-<img src="https://techstack-generator.vercel.app/prettier-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 0px; margin-bottom: 5px;" />
-<img src="https://techstack-generator.vercel.app/aws-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 0px;" /><img src="https://techstack-generator.vercel.app/docker-icon.svg" alt="icon" width="62" style="width: 48px; height: 48px; margin-right: 5px; margin-bottom: 0px;" />
+<div style="display: flex; align-items: flex-start;">
+    <img src="https://techstack-generator.vercel.app/python-icon.svg" alt="icon" width="48" height="48" /><img src="https://techstack-generator.vercel.app/django-icon.svg" alt="icon" width="48" height="48" />
+    <img src="https://techstack-generator.vercel.app/js-icon.svg" alt="icon" width="48" height="48" /><img src="https://techstack-generator.vercel.app/github-icon.svg" alt="icon" width="48" height="48" />
+    <img src="https://techstack-generator.vercel.app/mysql-icon.svg" alt="icon" width="48" height="48" /><img src="https://techstack-generator.vercel.app/cpp-icon.svg" alt="icon" width="48" height="48" />
+    <img src="https://techstack-generator.vercel.app/webpack-icon.svg" alt="icon" width="48" height="48" /><img src="https://techstack-generator.vercel.app/aws-icon.svg" alt="icon" width="48" height="48" />
+    <img src="https://techstack-generator.vercel.app/docker-icon.svg" alt="icon" width="48" height="48" />
 </div>
+
 
 <br />
 <details>
