--- a/main.mustache
+++ b/main.mustache
@@ -33,14 +33,10 @@
 <a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ"> <img alt="Plum" width="40px" src="https://i.imgur.com/PNhxaKM.png" /></a>
 
 <h3><img src="https://i.imgur.com/yQHTmCW.png" width="15" /> 𝗧𝗲𝗰𝗵 𝗦𝘁𝗮𝗰𝗸 </h3>
-<div style="display: flex; align-items: flex-start;">
-    <img src="https://techstack-generator.vercel.app/python-icon.svg" alt="icon" width="48" height="48" /><img src="https://techstack-generator.vercel.app/django-icon.svg" alt="icon" width="48" height="48" />
-    <img src="https://techstack-generator.vercel.app/js-icon.svg" alt="icon" width="48" height="48" /><img src="https://techstack-generator.vercel.app/github-icon.svg" alt="icon" width="48" height="48" />
-    <img src="https://techstack-generator.vercel.app/mysql-icon.svg" alt="icon" width="48" height="48" /><img src="https://techstack-generator.vercel.app/cpp-icon.svg" alt="icon" width="48" height="48" />
-    <img src="https://techstack-generator.vercel.app/webpack-icon.svg" alt="icon" width="48" height="48" /><img src="https://techstack-generator.vercel.app/aws-icon.svg" alt="icon" width="48" height="48" />
-    <img src="https://techstack-generator.vercel.app/docker-icon.svg" alt="icon" width="48" height="48" />
-</div>
-
+<img src="https://github-widgetbox-lki0s5r2o-dipanspotify.vercel.app/api/skills?languages=js,php,python,html,css,cpp,kotlin,bash,r,json,yaml,mysql,powershell,markdown"/>
+<img src="https://github-widgetbox-lki0s5r2o-dipanspotify.vercel.app/api/skills?frameworks=django,bootstrap,angular,ruby,jquery"/>
+<img src="https://github-widgetbox-lki0s5r2o-dipanspotify.vercel.app/api/skills?tools=git,docker,npm,webpack,firebase,wordpress,vercel,nodejs,heroku,apache,nginx,aws,jupyter,prettier"/>
+<img src="https://github-widgetbox-lki0s5r2o-dipanspotify.vercel.app/api/skills?software=linux,windows,vscode"/>
 
 <br />
 <details>
