--- a/main.mustache
+++ b/main.mustache
@@ -32,8 +32,8 @@
 <a href="https://medium.com/@d19cyber"> <img alt="Medium" width="40px" src="https://i.imgur.com/HvRIk6L.png" /></a>
 <a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ"> <img alt="Plum" width="40px" src="https://i.imgur.com/PNhxaKM.png" /></a>
 
-<h3><img src="https://i.imgur.com/yQHTmCW.png" width="15" /> 𝗧𝗲𝗰𝗵 𝗦𝘁𝗮𝗰𝗸 </h3>
-
+<h3><img src="https://cdn-icons-png.flaticon.com/512/4257/4257487.png" width="15" /> 𝗧𝗲𝗰𝗵 𝗦𝘁𝗮𝗰𝗸 </h3>
+<img src="https://skillicons.dev/icons?i=py,django,html,css,js,r,php,pytorch,latex,linkedin,linux,powershell,md,matlab,octave,jquery,rails,bash,github,git,githubactions,stackoverflow,vim,visualstudio,d3,flask,angular,atom,emacs,cpp,heroku,firebase,sqlite,mysql,aws,gcp,cassandra,docker,bootstrap,codepen,webpack,wordpress,nodejs,tensorflow,androidstudio" />
 
 <br />
 <details>
