--- a/main.mustache
+++ b/main.mustache
@@ -28,7 +28,7 @@ Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i><
 <details>
    <summary> &#9655;</summary>
    <h3><img src="https://cdn-icons-png.flaticon.com/512/4257/4257487.png" width="15" /> Tech Stack </h3>
-   <img src="https://skillicons.dev/icons?i=py,django,html,css,js,r,php,pytorch,latex,linux,powershell,md,rails,bash,github,git,githubactions,visualstudio,flask,angular,atom,cpp,heroku,firebase,sqlite,mysql,aws,gcp,cassandra,docker" />
+   <img src="https://skillicons.dev/icons?i=py,django,html,css,js,r,latex,linux,md,bash,git,visualstudio,angular,cpp,mysql" />
    <br />
    <details>
       <summary> &#9655;</summary>
